Update dockerfile and create docker compose.yml (#113)
* docker-compose.yml file

Right now still the URL path, etc have to be changed manually, mongo-express can help there.

* Updating/fixing Dockerfile

Now the Dockerfile downloads the latest source code automatically.
Maybe in the future a tag for releases, like stable should be used.

* Update README.md docker-compose.yml & Dockerfile

Included directions what to do, when using docker-compose.yml and Dockerfile

* Fix first-time-setup link

* Update README.md

* Update Dockerfile

* Update Dockerfile

* Update docker-compose.yml

* Update docker-compose.yml

Co-authored-by: Valentin Slawicek <valentin.slawi@gmail.com>